[package]
name = "crate_checker"
description = "browse crates on the terminal, an example for dumb_json_parser"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
dumb_json_parser.workspace = true

[dependencies.reqwest]
version = "0.12.12"
features = ["blocking"]
